# parallax

./: .gitignore  AGENTIC_CONTEXT_IMPLEMENTATION.md  ARCHITECTURE_DIAGRAM.md  ARCHITECTURE_FLOW.md  EVALUATION.md  IDEA.md  KEY_FEATURES.md  QUICK_REFERENCE.md  README.md  SEMANTIC_GRAPH_COMPARISON.md  implementation-plan-2.md  implementation-plan-3.md  run_mapper.py
mapper/: .gitignore  CONTEXT_PROCESSOR_README.md  DASHBOARD_README.md  EXECUTOR_README.md  GATEWAY_MAPPER_README.md  GRAPH_QUERIES_EXAMPLES.md  README.md  RUN_GATEWAY_EXAMPLE.md  SEMANTIC_MAPPER_README.md  STORAGE_ARCHITECTURE.md  USAGE.md  agentic_pr_context.py  browser_agent.py  cluster_manager.py  context_processor.py  env.example  executor.py  gateway_distributor.txt  gateway_internal.txt  gateway_reseller.txt  github_mcp_client.py  graph_queries.py  mission.json  pyproject.toml  selector_learner.py  semantic_graph.json  semantic_graph_Distributor.json  semantic_graph_internal.json  semantic_graph_reseller.json  semantic_mapper.py  semantic_mapper_with_gateway.py  start-dashboard.sh  test_repository_manager.py  view_chromadb.py
mapper/backend/: ALEMBIC_USAGE.md  PERSONA_MANAGEMENT.md  README.md  README_DATABASE_SETUP.md  TASK_MANAGEMENT.md  pyproject.toml
mapper/demo/: DEMO_SCRIPT.md  JIRA_INTEGRATION_FLOW.md  KEY_FEATURES.md  README.md  SOLUTION_OVERVIEW.md  sample_mission.json  sample_report.json  sample_semantic_graph.json
mapper/frontend/: README.md  index.html  package-lock.json  package.json  vite.config.ts
mapper/scripts/: README.md  extract_forms.js  extract_headers.js  extract_key_content.js  extract_tables.js  init_test_repository.py
mapper/tasks/: README.md  TASK-1_task.md  TASK-2_task.md  Task-3.md  (+2 more)
(+51 files in other folders)
