[project]
name = "agentic-qa-mapper"
version = "0.1.0"
description = "Agentic QA discovery mapper for web application testing"
requires-python = ">=3.11"
dependencies = [
    "browser-use>=0.11.2",
    "playwright>=1.57.0",
    "networkx>=3.6.1",
    "chromadb>=1.4.0",
    "langchain-openai>=0.2.0",
    "langchain-community>=0.3.0",
    "langgraph>=0.2.0",
    "pydantic",
    "python-dotenv>=1.0.0",
    "rich>=14.2.0",
    "asyncpg>=0.29.0",
    "httpx>=0.27.0",
    "pygithub>=2.1.1",
]
